; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_msi-laptop.c_get_lcd_level.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_msi-laptop.c_get_lcd_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSI_EC_COMMAND_LCD_LEVEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_lcd_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_lcd_level() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 0, i64* %2, align 8
  %5 = load i32, i32* @MSI_EC_COMMAND_LCD_LEVEL, align 4
  %6 = call i32 @ec_transaction(i32 %5, i64* %2, i32 1, i64* %3, i32 1)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %1, align 4
  br label %15

11:                                               ; preds = %0
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = sdiv i32 %13, 31
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %11, %9
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @ec_transaction(i32, i64*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
